# MetaHackathon

./: Dockerfile  README.md  TODO.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
server/server/: app.py
