[project]
name = "customer-support-env"
version = "0.1.0"
description = "OpenEnv customer support simulation environment"
authors = [{ name = "Vaishnavi Singh" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
